force-app/main/default/objects/TelefonosTransferencia__mdt/TelefonosTransferencia__mdt.object-meta.xml
<CustomObject>
    <description>Listado de números de teléfono provenientes de transferencias internas</description>
    <label>Teléfono Transferencia</label>
    <pluralLabel>Teléfonos Transferencia</pluralLabel>
</CustomObject>