force-app/main/default/objects/TelefonosTransferencia__mdt/fields/CampanaInboundIVR__c.field-meta.xml
<CustomField>
    <fullName>CampanaInboundIVR__c</fullName>
    <description>Campaña Inbound relacionada para apertura del argumentario.</description>
    <inlineHelpText>Campaña Inbound (VR) del CMT Relación de Mensajes de Bienvenida</inlineHelpText>
    <label>Campaña Inbound (IVR)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>