force-app/main/default/objects/TelefonosTransferencia__mdt/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>Número de teléfono completo o la parte inicial en común</description>
    <inlineHelpText>Puede introducir el número completo o la parte inicial en común</inlineHelpText>
    <label>Número de teléfono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>