force-app/main/default/objects/TelefonosTransferencia__mdt/fields/source_manualrecord__c.field-meta.xml
<CustomField>
    <fullName>source_manualrecord__c</fullName>
    <description>Campo análogo al de “Origen Manual” del Lead</description>
    <label>Origen - Registro Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Llamada Entrante</fullName>
                <default>true</default>
                <label>Llamada Entrante</label>
            </value>
            <value>
                <fullName>Referencia</fullName>
            </value>
            <value>
                <fullName>Venta Presencial</fullName>
            </value>
            <value>
                <fullName>Gestión de Cartera</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Retención CESS</fullName>
            </value>
            <value>
                <fullName>Retención SECI</fullName>
            </value>
            <value>
                <fullName>Atención al Cliente CESS</fullName>
            </value>
            <value>
                <fullName>Atención al Cliente SECI</fullName>
            </value>
            <value>
                <fullName>Transcom</fullName>
            </value>
            <value>
                <fullName>Transferencia MM</fullName>
            </value>
            <value>
                <fullName>Blecis Sevilla</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>