force-app/main/default/objects/TelefonosTransferencia__mdt/listViews/Detalle_telefonos.listView-meta.xml
<ListView>
    <fullName>Detalle_telefonos</fullName>
    <columns>MasterLabel</columns>
    <columns>phone__c</columns>
    <columns>source_manualrecord__c</columns>
    <columns>CampanaInboundIVR__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detalle teléfonos</label>
    <language>en_US</language>
</ListView>